added bankruptcy courts

--- a/index.html
+++ b/index.html
@@ -268,13 +268,13 @@
 				case "ohsdc":
 					data[x].courtId = "Ohio Southern District Court";
 					break;
-				case "oked":
+				case "okedc":
 					data[x].courtId = "Oklahoma Eastern District Court";
 					break;
-				case "okwd":
+				case "okwdc":
 					data[x].courtId = "Oklahoma Western District Court";
 					break;
-				case "oknd":
+				case "okndc":
 					data[x].courtId = "Oklahoma Northern District Court";
 					break;
 				case "ordc":
@@ -400,7 +400,285 @@
 				case "citdc":
 					data[x].courtId = "U.S. Court of International Trade";
 					break;
-/*Need Bankruptcy Courts Still*/
+					case "alnbk":
+					data[x].courtId = "Alabama Northern Bankruptcy Court";
+					break;
+				case "almbk":
+					data[x].courtId = "Alabama Middle Bankruptcy Court";
+					break;
+				case "alsbk":
+					data[x].courtId = "Alabama Southern Bankruptcy Court";
+					break;
+				case "akbk":
+					data[x].courtId = "Alaska Bankruptcy Court";
+					break;
+				case "azbk":
+					data[x].courtId = "Arizona Bankruptcy Court";
+					break;
+				case "arebk":
+					data[x].courtId = "Arkansas Eastern Bankruptcy Court";
+					break;
+				case "arwbk":
+					data[x].courtId = "Arkansas Western Bankruptcy Court";
+					break;
+				case "arcbk":
+					data[x].courtId = "Arkansas Central Bankruptcy Court";
+					break;
+				case "canbk":
+					data[x].courtId = "California Northern Bankruptcy Court";
+					break;
+				case "caebk":
+					data[x].courtId = "California Eastern Bankruptcy Court";
+					break;
+				case "casbk":
+					data[x].courtId = "California Southern Bankruptcy Court";
+					break;
+				case "cacbk":
+					data[x].courtId = "California Central Bankruptcy Court";
+					break;
+				case "cobk":
+					data[x].courtId = "Colorado Bankruptcy Court";
+					break;
+				case "ctbk":
+					data[x].courtId = "Connecticut Bankruptcy Court";
+					break;
+				case "debk":
+					data[x].courtId = "Delaware Bankruptcy Court";
+					break;
+				case "dcbk":
+					data[x].courtId = "District of Columbia Bankruptcy Court";
+					break;
+				case "flnbk":
+					data[x].courtId = "Florida Northern Bankruptcy Court";
+					break;
+				case "flmbk":
+					data[x].courtId = "Florida Middle Bankruptcy Court";
+					break;
+				case "flsbk":
+					data[x].courtId = "Florida Southern Bankruptcy Court";
+					break;
+				case "ganbk":
+					data[x].courtId = "Georgia Northern Bankruptcy Court";
+					break;
+				case "gambk":
+					data[x].courtId = "Georgia Middle Bankruptcy Court";
+					break;
+				case "gasbk":
+					data[x].courtId = "Georgia Southern Bankruptcy Court";
+					break;
+				case "gubk":
+					data[x].courtId = "Guam Bankruptcy Court";
+					break;
+				case "hibk":
+					data[x].courtId = "Hawaii Bankruptcy Court";
+					break;
+				case "idbk":
+					data[x].courtId = "Idaho Bankruptcy Court";
+					break;
+				case "ilnbk":
+					data[x].courtId = "Illinois Northern Bankruptcy Court";
+					break;
+				case "ilcbk":
+					data[x].courtId = "Illinois Central Bankruptcy Court";
+					break;
+				case "ilsbk":
+					data[x].courtId = "Illinois Southern Bankruptcy Court";
+					break;
+				case "innbk":
+					data[x].courtId = "Indiana Northern Bankruptcy Court";
+					break;
+				case "insbk":
+					data[x].courtId = "Indiana Southern Bankruptcy Court";
+					break;
+				case "ianbk":
+					data[x].courtId = "Iowa Northern Bankruptcy Court";
+					break;
+				case "iasbk":
+					data[x].courtId = "Iowa Southern Bankruptcy Court";
+					break;
+				case "ksbk":
+					data[x].courtId = "Kansas Bankruptcy Court";
+					break;
+				case "kyebk":
+					data[x].courtId = "Kentucky Eastern Bankruptcy Court";
+					break;
+				case "kywbk":
+					data[x].courtId = "Kentucky Western Bankruptcy Court";
+					break;
+				case "laebk":
+					data[x].courtId = "Louisiana Eastern Bankruptcy Court";
+					break;
+				case "lawbk":
+					data[x].courtId = "Louisiana Western Bankruptcy Court";
+					break;
+				case "lambk":
+					data[x].courtId = "Louisiana Midlle Bankruptcy Court";
+					break;
+				case "mabk":
+					data[x].courtId = "Massachusetts Bankruptcy Court";
+					break;
+				case "mebk":
+					data[x].courtId = "Maine Bankruptcy Court";
+					break;
+				case "mdbk":
+					data[x].courtId = "Maryland Bankruptcy Court";
+					break;
+				case "miebk":
+					data[x].courtId = "Michigan Eastern Bankruptcy Court";
+					break;
+				case "miwbk":
+					data[x].courtId = "Michigan Western Bankruptcy Court";
+					break;
+				case "mnbk":
+					data[x].courtId = "Minnesota Bankruptcy Court";
+					break
+				case "msnbk":
+					data[x].courtId = "Mississippi Northern Bankruptcy Court";
+					break;
+				case "mssbk":
+					data[x].courtId = "Mississippi Northern Bankruptcy Court";
+					break;
+				case "mobk":
+					data[x].courtId = "Montana Bankruptcy Court";
+					break;
+				case "nebk":
+					data[x].courtId = "Nebraska Bankruptcy Court";
+					break;
+				case "nvbk":
+					data[x].courtId = "Nevada Bankruptcy Court";
+					break;
+				case "nebk":
+					data[x].courtId = "New Hampshire Bankruptcy Court";
+					break;
+				case "njbk":
+					data[x].courtId = "New Jersey Bankruptcy Court";
+					break;
+				case "nmbk":
+					data[x].courtId = "New Mexico Bankruptcy Court";
+					break;
+				case "nyebk":
+					data[x].courtId = "New York Eastern Bankruptcy Court";
+					break;
+				case "nywbk":
+					data[x].courtId = "New York Western Bankruptcy Court";
+					break;
+				case "nysbk":
+					data[x].courtId = "New York Southern Bankruptcy Court";
+					break;
+				case "nynbk":
+					data[x].courtId = "New York Northern Bankruptcy Court";
+					break;
+				case "ncebk":
+					data[x].courtId = "North Carolina Eastern Bankruptcy Court";
+					break;
+				case "ncmbk":
+					data[x].courtId = "North Carolina Middle Bankruptcy Court";
+					break;
+				case "ncwbk":
+					data[x].courtId = "North Carolina Western Bankruptcy Court";
+					break;
+				case "ndbk":
+					data[x].courtId = "North Dakota Bankruptcy Court";
+					break;
+				case "ohnbk":
+					data[x].courtId = "Ohio Northern Bankruptcy Court";
+					break;
+				case "ohsbk":
+					data[x].courtId = "Ohio Southern Bankruptcy Court";
+					break;
+				case "oked":
+					data[x].courtId = "Oklahoma Eastern Bankruptcy Court";
+					break;
+				case "okwd":
+					data[x].courtId = "Oklahoma Western Bankruptcy Court";
+					break;
+				case "oknd":
+					data[x].courtId = "Oklahoma Northern Bankruptcy Court";
+					break;
+				case "orbk":
+					data[x].courtId = "Oregon Bankruptcy Court";
+					break;
+				case "paebk":
+					data[x].courtId = "Pennsylvania Eastern Bankruptcy Court";
+					break;
+				case "pawbk":
+					data[x].courtId = "Pennsylvania Western Bankruptcy Court";
+					break;
+				case "pambk":
+					data[x].courtId = "Pennsylvania Middle Bankruptcy Court";
+					break;
+				case "prbk":
+					data[x].courtId = "Puerto Rico Bankruptcy Court";
+					break;
+				case "ribk":
+					data[x].courtId = "Rhode Island Bankruptcy Court";
+					break;
+				case "scbk":
+					data[x].courtId = "South Carolina Bankruptcy Court";
+					break;
+				case "sdbk":
+					data[x].courtId = "South Dakota Bankruptcy Court";
+					break;
+				case "ohsbk":
+					data[x].courtId = "Ohio Southern Bankruptcy Court";
+					break;
+				case "tnebk":
+					data[x].courtId = "Tennessee Eastern Bankruptcy Court";
+					break;
+				case "tnwbk":
+					data[x].courtId = "Tennessee Western Bankruptcy Court";
+					break;
+				case "tnmbk":
+					data[x].courtId = "Tennessee Middle Bankruptcy Court";
+					break;
+				case "txnbk":
+					data[x].courtId = "Texas Northern Bankruptcy Court";
+					break;
+				case "txsbk":
+					data[x].courtId = "Texas Southern Bankruptcy Court";
+					break;
+				case "txwbk":
+					data[x].courtId = "Texas Western Bankruptcy Court";
+					break;
+				case "nmibk":
+					data[x].courtId = "Northern Mariana Islands Bankruptcy Court";
+					break;
+				case "utbk":
+					data[x].courtId = "Utah Bankruptcy Court";
+					break;
+				case "vtbk":
+					data[x].courtId = "Vermont Bankruptcy Court";
+					break;
+				case "vibk":
+					data[x].courtId = "U.S. Virgin Islands Bankruptcy Court";
+					break;
+				case "vaebk":
+					data[x].courtId = "Virgina Eastern Bankruptcy Court";
+					break;
+				case "vawbk":
+					data[x].courtId = "Virginia Western Bankruptcy Court";
+					break;
+				case "waebk":
+					data[x].courtId = "Washington Eastern Bankruptcy Court";
+					break;
+				case "wawbk":
+					data[x].courtId = "Washington Western Bankruptcy Court";
+					break;
+				case "wvnbk":
+					data[x].courtId = "West Virginia Northern Bankruptcy Court";
+					break;
+				case "wvsbk":
+					data[x].courtId = "West Virginia Southern Bankruptcy Court";
+					break;
+				case "wiebk":
+					data[x].courtId = "Wisconsin Eastern Bankruptcy Court";
+					break;
+				case "wiwbk":
+					data[x].courtId = "Wisconsin Western Bankruptcy Court";
+					break;
+				case "wybk":
+					data[x].courtId = "Wyoming Bankruptcy Court";
+					break;
 			}
 		}
 
@@ -443,7 +721,10 @@
 		}
 
 		function changeNosCode (value, x, data) {
-			/* IF data[x].natureOfSuit IS 4 digits, then lop off 1st digit and  */
+			/* if (data[x].natureOfSuit.length == 4) {
+				data[x].natureOfSuit = data[x].natureOfSuit.slice(1, 4);	
+			} */
+
 			switch (data[x].natureOfSuit) {
 				case "1":
 					data[x].natureOfSuit = "1 - USA is a Plaintiff";
@@ -759,9 +1040,7 @@
 					break;
 			}
 		}
-		
-		//native javascript
-        document.write( json2html.transform(data,template) );   
+ 
     </script>
 </body>
 </html>
