--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 					data[x].courtId = "U.S. Virgin Islands District Court";
 					break;
 				case "vaedc":
-					data[x].courtId = "Virgina Eastern District Court";
+					data[x].courtId = "Virginia Eastern District Court";
 					break;
 				case "vawdc":
 					data[x].courtId = "Virginia Western District Court";
