--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 					data[x].courtId = "Louisiana Western District Court";
 					break;
 				case "lamdc":
-					data[x].courtId = "Louisiana Midlle District Court";
+					data[x].courtId = "Louisiana Middle District Court";
 					break;
 				case "madc":
 					data[x].courtId = "Massachusetts District Court";
@@ -799,7 +799,7 @@
 					data[x].natureOfSuit = "240 - Torts to Land";
 					break;
 				case "245":
-					data[x].natureOfSuit = "245 -Tort Product Liability";
+					data[x].natureOfSuit = "245 - Tort Product Liability";
 					break;
 				case "290":
 					data[x].natureOfSuit = "290 - All Other Real Property";
@@ -871,7 +871,7 @@
 					data[x].natureOfSuit = "443 - Housing/Accommodations";
 					break;
 				case "444":
-					data[x].natureOfSuit = "444  -Welfare";
+					data[x].natureOfSuit = "444  - Welfare";
 					break;
 				case "445":
 					data[x].natureOfSuit = "445 - Amer w/Disabilities-Employment";
@@ -912,7 +912,7 @@
 				case "610":
 					data[x].natureOfSuit = "610 - Forfeiture/Penalty - Agriculture";
 					break;
-					case "620":
+				case "620":
 					data[x].natureOfSuit = "620 - Forfeiture/Penalty - Other Food & Drug";
 					break;
 				case "625":
@@ -1009,7 +1009,7 @@
 					data[x].natureOfSuit = "810 - Selective Service";
 					break;
 				case "850":
-					data[x].natureOfSuit = "850 - Securities/Commodites/Exchange";
+					data[x].natureOfSuit = "850 - Securities/Commodities/Exchange";
 					break;
 				case "875":
 					data[x].natureOfSuit = "875 - Customer Challenge 12 USC 3410";
