--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
 					data[x].courtId = "U.S. Virgin Islands Bankruptcy Court";
 					break;
 				case "vaebk":
-					data[x].courtId = "Virgina Eastern Bankruptcy Court";
+					data[x].courtId = "Virginia Eastern Bankruptcy Court";
 					break;
 				case "vawbk":
 					data[x].courtId = "Virginia Western Bankruptcy Court";
