--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<h2>Instructions</h2>
 	<ol>
 		<li>Download JSON file of PACER results.</li>
+		<li>Open JSON file in a text editor, such as notepad.</li>
 		<li>Copy entries from JSON file, starting with the open curlycue bracket after content: [ and ending with closing curlycue bracket before ]. {...}</li>
 		<li>Paste in Text Area Above.</li>
 		<li>Hit Submit.</li>
