--- a/index.html
+++ b/index.html
@@ -225,7 +225,19 @@
 					data[x].courtId = "Mississippi Northern District Court";
 					break;
 				case "mssdc":
-					data[x].courtId = "Mississippi Northern District Court";
+					data[x].courtId = "Mississippi Southern District Court";
+					break;
+				case "mowdc":
+					data[x].courtId = "Missouri Western District Court";
+					break;
+				case "moedc":
+					data[x].courtId = "Missouri Eastern District Court";
+					break;
+				case "mowbk":
+					data[x].courtId = "Missouri Western Bankrupcty Court";
+					break;
+				case "moebk":
+					data[x].courtId = "Missouri Eastern Bankrupcty Court";
 					break;
 				case "modc":
 					data[x].courtId = "Montana District Court";
